tg-analytics -> - обновлена стурктура выдачи информации по аномалиям - дополнена структура для получения отчета по странице аномалий - исправлены баги с пустыми hostname и url - исправлены баги по некорректным отображениям некоторых значений
