# src/go/tg-analytics/internal/controllers/http/v1/dto/responses.go
@@ -45,7 +45,7 @@ type DeviceStatResponse struct {
 }
 
 type GetAnomaliesResponse struct {
-	BlockedResoursesCount uint                `json:"blocked_resourses_count"`
-	HostNamesCount        uint                `json:"hostnames_count"`
-	Data                  map[string][]string `json:"data"`
+	HostCount     uint                   `json:"host_count"`
+	BlockCount    uint                   `json:"block_count"`
+	HostAnomalies []models.HostAnomalies `json:"host_anomalies"`
 }
